Revert "OAK-11105: Remove usage of Guava ImmutableMap.of() - zero argument case"
This reverts commit 9fdfbb6831ed3758f8c3bcc7215e160027ced172.