@@ -16,6 +16,7 @@
  */
 package org.apache.jackrabbit.oak.security.user.whiteboard;
 
+import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.oak.spi.security.user.AuthorizableNodeName;
 import org.apache.jackrabbit.oak.spi.whiteboard.DefaultWhiteboard;
 import org.apache.jackrabbit.oak.spi.whiteboard.Whiteboard;
@@ -23,8 +24,6 @@ import org.junit.After;
 import org.junit.Test;
 
 import static org.junit.Assert.assertEquals;
-
-import java.util.Map;
 
 public class WhiteboardAuthorizableNodeNameTest {
 
@@ -54,7 +53,7 @@ public class WhiteboardAuthorizableNodeNameTest {
         authorizableNodeName.start(whiteboard);
 
         AuthorizableNodeName registered = authorizableId -> "generated";
-        whiteboard.register(AuthorizableNodeName.class, registered, Map.of());
+        whiteboard.register(AuthorizableNodeName.class, registered, ImmutableMap.of());
         assertEquals(registered.generateNodeName(TEST_ID), authorizableNodeName.generateNodeName(TEST_ID));
     }
 }
