@@ -16,6 +16,7 @@
  */
 package org.apache.jackrabbit.oak.exercise.security.authentication.external;
 
+import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.oak.spi.security.ConfigurationParameters;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalGroup;
@@ -159,7 +160,7 @@ public class CustomExternalIdentityProvider implements ExternalIdentityProvider 
                 @NotNull
                 @Override
                 public Map<String, ?> getProperties() {
-                    return Map.of();
+                    return ImmutableMap.of();
                 }
             };
         } else {
@@ -225,7 +226,7 @@ public class CustomExternalIdentityProvider implements ExternalIdentityProvider 
                 @NotNull
                 @Override
                 public Map<String, ?> getProperties() {
-                    return Map.of();
+                    return ImmutableMap.of();
                 }
             };
         } else {
