@@ -25,6 +25,8 @@ import java.util.function.Supplier;
 
 import javax.jcr.Credentials;
 
+import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
+
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -81,7 +83,7 @@ public final class CompositeCredentialsSupport implements CredentialsSupport {
     public Map<String, ?> getAttributes(@NotNull Credentials credentials) {
         Collection<CredentialsSupport> all = this.credentialSupplier.get();
         if (all.isEmpty()) {
-            return Map.of();
+            return ImmutableMap.of();
         } else if (all.size() == 1) {
             return all.iterator().next().getAttributes(credentials);
         } else {
